# rust-grpc-service-bin

./: .gitignore  README.md  docker-compose.yml  prometheus.yml
grpc-service/: Cargo.toml  Dockerfile
grpc-service/proto/: service.proto
grpc-service/src/: main.rs
python-client/: Dockerfile  client.py  requirements.txt  send_message.py  service_pb2.py  service_pb2_grpc.py
