[package]
name = "grpc-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["full"] }
prometheus = "0.12"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
prost-build = "0.10"
